cond var notify address usage